UI/UX Updated